# rvemu

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build-wasm.sh
.github/workflows/: deploy.yaml
crates/rvemu/: Cargo.toml
crates/rvemu-cli/: Cargo.toml
crates/rvemu-cli/src/: main.rs
crates/rvemu-wasm/: Cargo.toml
crates/rvemu-wasm-gen/: Cargo.toml
crates/rvemu-wasm-gen/src/: main.rs
crates/rvemu-wasm/.cargo/: config.toml
crates/rvemu-wasm/src/: lib.rs  memory.rs  nostd.rs  shared_mem.rs  utils.rs
crates/rvemu/src/: data.rs  instr.rs  lib.rs  reg.rs
crates/rvemu/src/executor/: mod.rs  rv32i.rs
crates/rvemu/src/instr/: btype.rs  itype.rs  jtype.rs  mod.rs  rtype.rs  stype.rs  utils.rs  utype.rs
examples/assets/: small_b_instructions.S  small_i_instructions.S  small_j_instructions.S  small_s_instructions.S  small_u_instructions.S
rvemu-web/: astro.config.mjs  package-lock.json  package.json
rvemu-web/public/: rvemu.wasm
rvemu-web/src/components/: Controls.astro  Panel.astro  RegisterView.astro  SimLogs.astro  Visualizer.astro
rvemu-web/src/layouts/: BlankPage.astro  BlankPage.css
rvemu-web/src/pages/: index.astro  index.css
rvemu-web/src/scripts/: index.mts  index.ts  worker-ipc.mts  worker.mts  worker.ts
