[package]
name = "rvemu-wasm"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rvemu = { path = "../rvemu" }

# Patched, as dmalloc does not support global allocaator ("global" feature) when atomic target feature is enabled.
# We used a trust-me-bro feature to force the allocator to be single-threaded, which is safe for our usecase.
dlmalloc = { 
    git = "https://github.com/fusetim/dlmalloc-rs.git",
    branch = "fusetim/wasm-atomic-single-thread", 
    optional = true, 
    features = ["global", "trustme-single-threaded"]
}

[features]
default = ["dlmalloc"]
std = []
dlmalloc = ["dep:dlmalloc"]