[package]
name = "rvemu"
version = "0.1.0"
readme.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
paste = "1"
thiserror = {"version" = "2", default-features = false}

[features]
default = []
std = ["thiserror/std"]